--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>リンクプレビュー</title>
+<title>Replit風リンクプレビュー</title>
 <style>
   body {
     font-family: sans-serif;
@@ -10,28 +10,88 @@
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0; /* 背景色 */
   }
-  .link-container {
-    text-align: center;
-    background-color: #ffffff;
-    padding: 20px;
+  .link-preview-card {
+    width: 400px; /* プレビューカードの幅 */
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden; /* 角丸に合わせて内容を切り抜く */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* 影 */
+    background-color: #36393f; /* Discordの背景色に近い色 */
+    color: #ffffff; /* 文字色 */
+    text-decoration: none; /* リンクの下線を除去 */
+    display: block; /* 全体をリンクにするためブロック要素に */
   }
-  .link-container img {
-    max-width: 100%;
+  .preview-image-container {
+    width: 100%;
+    height: 200px; /* 画像の高さ */
+    overflow: hidden;
+    position: relative;
+    background-color: #000; /* 画像がない場合の背景色 */
+  }
+  .preview-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 画像がコンテナを覆うように調整 */
+  }
+  .overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 2.2em; /* "Idea to app, fast"の文字サイズ */
+    font-weight: bold;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* 文字の影 */
+    white-space: nowrap; /* テキストの改行を防ぐ */
+  }
+  .replit-logo {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    width: 30px; /* ロゴの幅 */
     height: auto;
-    border-radius: 4px;
-    cursor: pointer; /* マウスカーソルをポインターにする */
+  }
+  .preview-content {
+    padding: 15px;
+    background-color: #2e7d32; /* 緑色の部分 */
+  }
+  .preview-title {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  .preview-description {
+    font-size: 0.9em;
+    color: rgba(255, 255, 255, 0.8); /* 少し薄い文字色 */
+    line-height: 1.4;
+  }
+  .site-url {
+    font-size: 0.8em;
+    color: #b0b0b0; /* 上部のURLの色 */
+    padding: 10px 15px;
+    background-color: #36393f; /* Discordの背景色に近い色 */
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
 </style>
 </head>
 <body>
 
-<div class="link-container">
-  <a href="https://line.me/ti/g2/pWv463tMdBrvBba0LW7oDb2e4cisHTla5Lg0pQ?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank">
-    <img src="https://cdn.discordapp.com/attachments/1397087754105655479/1397127396439621733/IMG_5886.jpg?ex=688097c8&is=687f4648&hm=9cc89c6b9d97bac3cc1b038d067b1576a051493e1b62b7477831b5297eec4740&" alt="LINEグループに参加">
+<div style="background-color: #36393f; padding: 20px; border-radius: 8px;">
+  <p class="site-url" style="background-color: transparent; border-bottom: none; text-align: right; color: #57f287; font-size: 1em; padding: 0 0 10px 0;">
+    Replit.com
+  </p>
+
+  <a href="https://replit.com" target="_blank" class="link-preview-card">
+    <div class="preview-image-container">
+      <img src="https://cdn.glitch.global/039b83b3-85b2-4d57-827d-0d6c0f862908/replit-earth-bg.webp?v=1678901234567" alt="Replit background" class="preview-image">
+      <img src="https://assets.replit.com/images/replit-logo-small.svg" alt="Replit logo" class="replit-logo">
+      <div class="overlay-text">Idea to app, fast</div>
+    </div>
+    <div class="preview-content">
+      <div class="preview-title">Replit – Build apps and sites with AI</div>
+      <div class="preview-description">Replit is an AI-powered platform for building professional web app...</div>
+    </div>
   </a>
 </div>
 
