--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
         body {
             font-family: 'Arial', sans-serif;
             background-color: #1a1a1a;
-            color: #f0f0f0; 
+            color: #f0f0f0;
             margin: 0;
             padding: 0;
             line-height: 1.6;
-            overflow-x: hidden; 
+            overflow-x: hidden;
 
-            
-            background-image: url('https://cdn.discordapp.com/attachments/1397087754105655479/1397127396439621733/IMG_5886.jpg?ex=688097c8&is=687f4648&hm=9cc89c6b9d97bac3cc1b038d067b1576a051493e1b62b7477831b5297eec4740&'); 
-            background-size: cover; 
-            background-position: center center; 
+            background-image: url('https://cdn.discordapp.com/attachments/1397087754105655479/1397127396439621733/IMG_5886.jpg?ex=688097c8&is=687f4648&hm=9cc89c6b9d97bac3cc1b038d067b1576a051493e1b62b7477831b5297eec4740&');
+            background-size: cover;
+            background-position: center center;
             background-attachment: fixed;
             background-repeat: no-repeat;
         }
-     
+
         body::before {
             content: "";
             position: fixed;
@@ -30,7 +29,7 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.4);
-            z-index: -1; 
+            z-index: -1;
         }
 
         .container {
@@ -38,8 +37,8 @@
             margin: 0 auto;
             padding: 20px;
             text-align: center;
-            position: relative; 
-            z-index: 1; 
+            position: relative;
+            z-index: 1;
         }
         header {
             padding: 100px 0;
@@ -76,28 +75,28 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-wrap: wrap; 
+            flex-wrap: wrap;
             margin-bottom: 50px;
-            gap: 20px; 
+            gap: 20px;
         }
         .member-icon {
-            width: 150px; 
+            width: 150px;
             height: 150px;
             border-radius: 50%;
-            overflow: hidden; 
+            overflow: hidden;
             border: 3px solid #555;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-            flex-shrink: 0; 
+            flex-shrink: 0;
         }
         .member-icon img {
             width: 100%;
             height: 100%;
-            object-fit: cover; 
+            object-fit: cover;
         }
         .member-intro-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
-            gap: 30px; 
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
             padding: 0 20px;
         }
         .member-intro {
@@ -122,17 +121,17 @@
         }
         .join-button {
             display: inline-block;
-            background-color: #556b2f;
+            background-color: #4CAF50;
             color: #ffffff;
             padding: 18px 40px;
             font-size: 1.5em;
             text-decoration: none;
-            border-radius: 50px;
+            border-radius: 5px;
             transition: background-color 0.3s ease, transform 0.2s ease;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
         }
         .join-button:hover {
-            background-color: #6b8e23;
+            background-color: #45a049;
             transform: translateY(-3px);
         }
         footer {
@@ -187,7 +186,7 @@
 
     <div class="join-section">
         <div class="container">
-            <a href="https://line.me/ti/g2/pWv463tMdBrvBba0LW7oDb2e4cisHTla5Lg0pQ?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" class="join-button">絢爛へ参加</a>
+            <a href="https://line.me/ti/g2/pWv463tMdBrvBba0LW7oDb2e4cisHTla5Lg0pQ?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" class="join-button">&#x1F4AC; 絢爛に参加</a>
         </div>
     </div>
 
